# casm_vis_analysis

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: beam_validation.md  cli_reference.md  delay.md  fringe_stop.md  offsource.md  rfi.md  sources_and_transits.md  svd_calibration_application.md  walkthroughs.md
notebooks/: casm_calibration_beamforming_walkthrough.ipynb  casm_end_to_end.ipynb  casm_pulsar_search_walkthrough.ipynb  end_to_end.ipynb  end_to_end_verify.ipynb
src/casm_vis_analysis/: __init__.py  beam_power.py  beam_validation.py  cli.py  delay.py  fringe_stop.py  offsource.py  output.py  position_fit.py  rfi.py  runners.py  sources.py
src/casm_vis_analysis/configs/: rfi_static_v1.json  rfi_static_v2.json  rfi_static_v3.json
src/casm_vis_analysis/layout/: __init__.py  _grid.py  build.py  casman_pull.py  cli.py  diff.py  enu.py  sync.py
src/casm_vis_analysis/plotting/: __init__.py  _data_api.py  autocorr.py  delay_diag.py  fringe_diag.py  phase_freq.py  position_fit.py  waterfall.py
tests/: conftest.py  test_beam_validation.py  test_delay.py  test_fringe_stop.py  test_layout_cli.py  test_offsource.py  test_output.py  test_phase2_additions.py  test_position_fit.py  test_sources.py
